@@ -12,7 +12,7 @@
  *******************************************************************************/
 import { useCallback, useEffect, useState } from 'react';
 import { Edge, Node, XYPosition, useKeyPress, useStoreApi } from 'reactflow';
-import { UseGroupPaletteValue, UseGroupPaletteState } from './useGroupPalette.types';
+import { UseGroupPaletteState, UseGroupPaletteValue } from './useGroupPalette.types';
 
 const computePalettePosition = (event: MouseEvent | React.MouseEvent, bounds?: DOMRect): XYPosition => {
   return {
@@ -44,11 +44,12 @@ export const useGroupPalette = (): UseGroupPaletteValue => {
     []
   );
 
-  const hideGroupPalette = () => {
+  const hideGroupPalette = useCallback(() => {
     if (state.isOpened) {
       setState((prevState) => ({ ...prevState, position: null, isOpened: false }));
     }
-  };
+  }, [state.isOpened]);
+
   return {
     position: state.position,
     isOpened: state.isOpened,
