@@ -47,6 +47,8 @@ The use of generics has thus been greatly reduced since they could not create a 
 - https://github.com/eclipse-sirius/sirius-web/issues/3287[#3287] [form] The label sent with the form refreshed event payload is the representation name, not the always the `FormRepresentationDescription#titleExpression`
 - https://github.com/eclipse-sirius/sirius-web/issues/3290[#3290] [diagram] Fix an issue that prevent the group palette to be displayed if only list children are selected.
 - https://github.com/eclipse-sirius/sirius-web/issues/3018[3018] [gantt] Fix reference widgets for AbstractTask Details
+- https://github.com/eclipse-sirius/sirius-web/issues/3298[#3298] [diagram] Fix an issue in which the diagram had unnecessary rendering
+
 
 === New Features
 
